clusters/home/unifi/home-unifi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
