clusters/home/unifi/unifi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
