clusters/home/unifi/mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-db
  namespace: unifi
spec:
  selector:
    app: unifi-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-db
  namespace: unifi
  labels:
    app: unifi-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: unifi-db
    spec:
      containers:
        - name: unifi-db
          image: docker.io/mongodb/mongodb-community-server:8.0.10-ubi8
          args:
            - --ipv6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init-mongodb.js
              subPath: init-mongodb.js
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unifi-db-pvc
        - name: init-script
          configMap:
            name: unifi-db-init-script
