clusters/home/unifi/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gw-unifi
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      #lbipam.cilium.io/ips: 2001:861:3a05:8d85::2,172.16.5.2
      lbipam.cilium.io/ips: 172.16.5.2
  listeners:
    - protocol: HTTP
      name: http
      port: 80
      hostname: '*.home.tremoureux.fr'
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.home.tremoureux.fr'
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-app
  namespace: unifi
spec:
  parentRefs:
    - name: gw-unifi
  hostnames:
    - unifi.home.tremoureux.fr
  rules:
    - backendRefs:
        - name: unifi-http
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-inform
  namespace: unifi
spec:
  parentRefs:
    - name: gw-unifi
  hostnames:
    - unifi-inform.home.tremoureux.fr
  rules:
    - backendRefs:
        - name: unifi-inform
          port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-http
  namespace: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-http
  template:
    metadata:
      labels:
        app: unifi-http
    spec:
      containers:
        - name: caddy
          image: caddy:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy
              readOnly: true
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-http
  namespace: unifi
spec:
  selector:
    app: unifi-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-app
  namespace: unifi
spec:
  selector:
    app: unifi-network-application
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-inform
  namespace: unifi
spec:
  selector:
    app: unifi-network-application
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
